Updated styling and responsiveness  for home page and breed page

--- a/cat-app/src/css/catDetails.css
+++ b/cat-app/src/css/catDetails.css
@@ -1,5 +1,9 @@
 .detail-image {
-    width: 500px !important
+    /* width: 500px !important */
+    float: left;
+    width:  1500px;
+    height: 450px !important;
+    object-fit: cover;
 }
 
 .detail-container {
