--- a/cat-app/src/index.css
+++ b/cat-app/src/index.css
@@ -82,16 +82,64 @@ button:focus-visible {
   gap: 1rem
 } */
 /* @import url('https://fonts.googleapis.com/css2?family=Chicle&display=swap'); */
-
-#root {
-  /* font-family: 'Chicle', cursive; */
-  font-family: 'Short Stack', cursive;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Short+Stack&display=swap');
 
+#root * {
+  /* font-family: 'Chicle', cursive; */
+  font-family: 'Short Stack', cursive;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  /* border: 1px solid black; */
+  /* width: 100%; */
+}
+
+body {
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+  /* width: 100%; */
+}
+
 .breed-img {
-  width: 400px;
-  height: 400px;
-  border: 1px solid red;
+  /* width: 400px;
+  height: 400px; */
+  /* border: 1px solid red; */
+  float: left;
+  width:  500px;
+  height: 450px !important;
+  object-fit: cover;
+  opacity: 1;
+  filter: alpha(opacity=40);
+  transition-duration: .5s;
+}
+
+
+
+img:hover {
+  opacity: .8;
+  filter: alpha(opacity=100);
+  transform: scale(1.02);
+  /* object-fit: contain;
+  transition: 1s; */
+}
+
+.breed-row {
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+}
+
+.breed-column {
+  margin: 2rem !important;
+}
+
+.breed-column>div {
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
