--- a/cat-app/src/index.css
+++ b/cat-app/src/index.css
@@ -1,87 +1,4 @@
-/* :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-
-/* 
-.breed-column {
-  border: 1px solid red;
-  border-radius: 1rem;
-  padding: 1rem;
-}
-
-.breed-row {
-  display: flex;
-  gap: 1rem
-} */
-/* @import url('https://fonts.googleapis.com/css2?family=Chicle&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Short+Stack&display=swap');
 
 #root * {
@@ -93,27 +10,21 @@ button:focus-visible {
 }
 
 #root {
-  /* border: 1px solid black; */
-  /* width: 100%; */
+
   width: 100vw;
-  /* padding: 0 !important;
-  margin: 0 !important;
-  box-sizing: border-box !important; */
-  /* border: 1px solid blue; */
+  min-height: 100vh;
+
 }
 
 nav {
-  /* border: 1px solid blue; */
   width: 100%;
+
 }
 
 .home-nav {
   display: flex;
   padding: 3rem 0rem 0rem 0rem !important;
-
   margin-bottom: 1rem;
-  /* width: 100%; */
-  /* width: 100vw; */
 }
 
 
@@ -122,28 +33,34 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
+  /* border: 1px solid blue; */
+  /* height: auto; */
+
 }
 
 
 .home-container {
-
   display: flex;
-  /* flex-direction: column; */
-  /* gap: 4rem; */
-  /* padding: 3rem !important; */
   width: 100%;
+  height: 100%;
   justify-content: center;
+
 }
 
 .home-div {
   width: 100%;
+  /* height: 100%; */
+  height: 100%;
+  /* border: 1px solid green; */
+  display: flex;
+  flex-direction: column;
 }
 
 
 .home-main {
   /* margin-top: 5rem !important; */
   display: flex;
-
+  /* border: 1px solid red; */
   justify-content: center;
   text-align: center;
 }
@@ -170,12 +87,6 @@ body {
   margin-top: 1rem;
 }
 
-
-.cat-image-container {
-
-  /* width: auto;
-  height: auto; */
-}
 
 .breed-img {
   /* width: 400px;
@@ -258,6 +169,8 @@ nav {
   justify-content: center;
 }
 
+
+
 @media all and (max-width: 960px) {
   .home-nav {
     padding: 3rem 1rem !important;
@@ -270,7 +183,8 @@ nav {
 
 @media all and (min-width: 630px) {
   .home-main {
-    margin-top: 5rem !important; }
+    margin-top: 5rem !important;
+  }
 
   .color-cat {
     width: 210px;
@@ -282,6 +196,7 @@ nav {
     width: 220px;
     /* border: 1px solid orange; */
   }
+  
 }
 
 
@@ -298,6 +213,10 @@ nav {
     width: 330px;
     /* border: 1px solid orange; */
   }
+  
+  .home-main {
+    height: 80vh;
+  }
 }
 
 @media all and (min-width: 1200px) {
@@ -307,9 +226,10 @@ nav {
 
 
   }
-  
+
   .black-cat {
     width: 450px;
 
   }
+
 }
