--- a/cat-app/src/index.css
+++ b/cat-app/src/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Short+Stack&display=swap');
 
 #root * {
@@ -21,10 +20,14 @@ nav {
 
 }
 
+.navbar {
+  /* margin: 0 !important; */
+}
+
 .home-nav {
   display: flex;
   padding: 3rem 0rem 0rem 0rem !important;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 
@@ -87,6 +90,10 @@ body {
   margin-top: 1rem;
 }
 
+
+.breed-container {
+  margin-top: 2rem !important;
+}
 
 .breed-img {
   /* width: 400px;
@@ -155,7 +162,7 @@ body {
 
 .input-group-text svg {
   fill: rgb(72, 67, 67);
-  ;
+  
 }
 
 .breed-filter:hover {
@@ -173,9 +180,12 @@ nav {
 
 @media all and (max-width: 960px) {
   .home-nav {
-    padding: 3rem 1rem !important;
+    /* padding: 3rem 1rem 2rem 1rem !important; */
 
+  }
 
+  .breed-container {
+    margin: 0 !important;
   }
 
 }
@@ -196,7 +206,7 @@ nav {
     width: 220px;
     /* border: 1px solid orange; */
   }
-  
+
 }
 
 
@@ -213,7 +223,7 @@ nav {
     width: 330px;
     /* border: 1px solid orange; */
   }
-  
+
   .home-main {
     height: 80vh;
   }
@@ -233,3 +243,17 @@ nav {
   }
 
 }
+
+@media all and (max-width: 600px) {
+
+
+  .navbar {
+    margin: 1rem !important;
+  }
+
+  .home-nav {
+    padding: 3rem 1rem 0rem 1rem !important;
+
+  }
+}
+
