--- a/cat-app/src/css/navbar.css
+++ b/cat-app/src/css/navbar.css
@@ -39,12 +39,32 @@
     width: 100% ;
 }
 
-/* .me-auto.navbar-nav {
-    border: 1px solid red;
-    display: flex; 
-    flex-direction: row;
-    justify-content: start !important;
-} */
+button {
+    background-color: red;
+}
+.navbar-toggler{
+border: 2px solid #212529 !important;
+    padding: .3rem !important;
+    color: transparent !important;
+
+}
+
+.navbar-toggler:hover {
+    transition: .3s;
+    transform: translateY(-1px);
+}
+
+
+
+.navbar-toggler-icon {
+    padding: .5rem !important;
+}
+
+
+
+button{
+border: 1px solid red;
+}
 
 .me-auto {
     margin-left: auto !important;
