--- a/cat-app/src/css/faq.css
+++ b/cat-app/src/css/faq.css
@@ -157,7 +157,7 @@
     }
 
     .contact-column {
-        border: 1px solid red;
+        /* border: 1px solid red; */
         display: flex;
         flex-direction: row;
         /* flex-direction: column; */
