--- a/cat-app/src/index.css
+++ b/cat-app/src/index.css
@@ -49,7 +49,8 @@ body {
   width: 100%;
   height: 100%;
   justify-content: center;
-/* padding: 0 !important; */
+  /* padding: 0 !important; */
+
 }
 
 .home-div {
@@ -100,6 +101,10 @@ body {
 
 .breed-container {
   margin-top: 2rem !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .breed-img {
@@ -123,16 +128,21 @@ body {
   transform: scale(1.02);
   /* object-fit: contain;
   transition: 1s; */
+  /* border: 1px solid red; */
+  /* width: 100%; */
 }
 
 .breed-row {
   /* border: 1px solid red; */
   display: flex;
   justify-content: center;
+  width: 100%;
+
 }
 
 .breed-column {
   margin: 2rem !important;
+
 }
 
 .breed-column>div {
@@ -144,11 +154,31 @@ body {
 }
 
 .filter-row {
-  /* border: 1px solid red; */
   display: flex;
-  justify-content: center;
-  /* align-items: center; */
+  flex-direction: row;
+  /* gap: 5rem; */
+  width: 100%;
+  justify-content: end
+    /* align-items: center; */
 }
+
+.filter-row>*:nth-child(2) {
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 2rem !important;
+
+}
+
+.filter-row>*:nth-child(1) {
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  margin-left: 1rem !important;
+}
+
 
 .breed-filter-container {
   /* border: 1px solid red; */
@@ -161,12 +191,16 @@ body {
   padding: 1rem !important;
   transition: .1s
 }
-
+.breed-column img, .breed-column a {
+  /* border: 1px solid red; */
+  width: 100%;
+}
 .no-cat-text {
   display: flex;
   justify-content: center;
   font-size: 2rem;
 }
+
 .input-group-text {
   /* border: 1px solid red !important; */
   padding: 1rem !important;
@@ -197,7 +231,7 @@ nav {
   }
 
   .breed-container {
-    margin: 0 !important;
+    /* margin: 0 !important; */
   }
 
 }
@@ -246,6 +280,18 @@ nav {
   .home-row {
     flex-direction: row;
   }
+
+  .filter-row {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: row;
+    /* gap: 5rem; */
+    width: 100%;
+    justify-content: end
+      /* align-items: center; */
+  }
+
+
 }
 
 @media all and (min-width: 1200px) {
@@ -261,17 +307,53 @@ nav {
 
   }
 
+
+  .filter-row>*:nth-child(2) {
+    /* border: 1px solid blue; */
+
+    margin-right: 8rem !important;
+  }
+
+  .filter-row>*:nth-child(1) {
+    /* border: 1px solid blue; */
+
+    margin-left: 6rem !important;
+
+  }
+
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 690px) {
 
 
   .navbar {
     margin: 1rem !important;
+    /* padding: 0rem 1rem !important; */
   }
 
   .home-nav {
     padding: 3rem 1rem 0rem 1rem !important;
 
   }
+
+  .filter-row {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    /* gap: 5rem; */
+    width: 100%;
+    /* justify-content: end */
+    align-items: center;
+  }
+
+
+  .filter-row>*:nth-child(2),
+  .filter-row>*:nth-child(1) {
+    /* border: 1px solid blue; */
+
+    justify-content: center;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
 }
